Fixed extra padding from bottom left grid

--- a/css_hw/style_css_homework.css
+++ b/css_hw/style_css_homework.css
@@ -106,6 +106,7 @@ mark {
     display: grid;
     max-width: 1200px;
     margin: auto;
+    padding: 0;
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-rows: auto;
     row-gap: 40px;
